<resources>
    <string name="app_name">XLinuxTools</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">XLinuxTools</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_web_socket">Connect to WebSocket</string>

    <!-- Menu items -->
    <string name="menu_default">Default</string>
    <string name="menu_netflix">Netflix</string>

    <!-- Arrow buttons -->
    <string name="button_up">Up</string>
    <string name="button_down">Down</string>
    <string name="button_left">Left</string>
    <string name="button_right">Right</string>

    <!-- General clicks -->
    <string name="button_left_click">Left Click</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="log_in">Log in</string>

    <!-- Netflix buttons-->
    <string name="netflix_skip_intro">Skip Intro</string>
    <string name="netflix_next_episode">Next Episode</string>
    <string name="netflix_fast_forward">Fast forward</string>
    <string name="netflix_rewind">Rewind</string>
    <string name="netflix_play_pause">Play/Pause</string>
    <string name="netflix_volume_up">Volume Up</string>
    <string name="netflix_volume_down">Volume Down</string>
    <string name="netflix_mute">Mute</string>

    <!-- Vlc buttons -->
    <string name="vlc_browser_files">Browse Files</string>
    <string name="vlc_pause_player">Play/Pause</string>
    <string name="vlc_play_next_media">Play next</string>
    <string name="vlc_play_previous_media">Play previous</string>
    <string name="vlc_mute_volume">Mute</string>
    <string name="vlc_increase_volume">Volume Up</string>
    <string name="vlc_decrease_volume">Volume Down</string>
    <string name="vlc_fast_forward">Fast Forward</string>
    <string name="vlc_rewind">Rewind</string>
    <string name="vlc_stop">Stop</string>
    <string name="vlc_cycle_audio">Cycle Audio</string>
    <string name="vlc_cycle_subtitle">Cycle Subtitle</string>

</resources>
